@@ -1,3 +1,7 @@
+Tue Feb 22 16:27:31 CET 2005 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src-occ/org/jcae/mesh/cad/occ/OCCDiscretizeCurve3D.java:  An exception was raised when a small circular edge was discretized.
+
 Wed Feb  9 15:20:54 CET 2005 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/amibe/util/QuadTree.java (getNearestVertexProcedure):  Add a factor of 1.005 to take rounding errors into account when computing i2d.  A better approximation for this factor should be investigated.
